false CI flag added to build script

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=false && react-scripts build",
     "test": "jest",
     "eject": "react-scripts eject"
   },
